# build-webos

./: .gitignore  COPYING.MIT  Makefile.in  README.md  configure  configure.ac  mcf  weboslayers.py
build-templates/: Makefile.in  bblayers-conf.in  bitbake-rc.in  local-conf.in  mcf-status.in  oe-init-build-env.in
scripts/: build.sh  prerequisites.sh  tag_bitbake.sh  tag_oe.sh
